--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.2",
     "react-simple-star-rating": "^5.1.7",
